Fix playlist description gap.

--- a/src/renderer/less/pages.less
+++ b/src/renderer/less/pages.less
@@ -568,6 +568,7 @@
           font-size      : 1.6rem;
           //margin-bottom: 6px;
           margin-right   : 6px;
+          margin-bottom: 6px;
           flex-shrink    : unset;
         }
 
@@ -599,7 +600,7 @@
           position    : relative;
 
           .content {
-            height            : 100px;
+            height            : 4vh;
             -webkit-mask-image: -webkit-gradient(linear, left 50%, left 90%, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
           }
 
